--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "restaurant",
   "version": "1.0.0",
   "description": "Page d'accueil dynamique pour restaurant avec manipulation DOM en JavaScript",
+  "homepage": "https://ahmedchlk.github.io/Restaurant/",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
